--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,6 @@
+Changes made:
+* Added protected_attributes to gem dependencies
+----
 h1. Gcm on Rails (Google Cloud Messaging for Android on Rails)
 
 Gcm on Rails (gcm_on_rails) is a Ruby on Rails gem that allows you to easily incorporate Google's 'Google Cloud Messaging for Android' into your Rails application. This gem was derived from c2dm_on_rails (https://github.com/pimeys/c2dm_on_rails) after Google deprecated C2DM on June 27, 2012
